# optimus

./: .gitignore  Cargo.toml  LICENSE  expanded-tensor.rs
src/: main.rs  utils.rs
src/decoder/: decoder.rs  decoder_block.rs  mod.rs
src/embeddings/: input_embeddings.rs  mod.rs  pos_embeddings.rs
src/encoder/: encoder.rs  encoder_block.rs  mod.rs
src/feed_forward/: feed_forward.rs  mod.rs
src/layer_norm/: mod.rs  norm.rs
src/multi_head_attn/: mod.rs  multihead_block.rs
src/projection_layer/: mod.rs  projection.rs
src/residual_layer/: mod.rs  residual_conn.rs
src/tokenizer/: bert-wiki.json  mod.rs  tokentrainer.rs  wordlevel-wiki.json
src/transfomer/: transformer.rs
