[package]
name = "optimus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "*", features = ["metal"] }
candle-nn = { version = "*", features = ["metal"] }
tokenizers = "*"

