[package]
name = "optimus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
tokenizers = "*"

[patch."https://github.com/huggingface/candle.git"]
candle-core = {git = "https://github.com/nihalpasham/candle"}
candle-nn = {git = "https://github.com/nihalpasham/candle"}


